# pipelineprobe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  generate_mock_report.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  bugs.md  bugs_improvements.md  ci-integration.md  configuration.md  requirement.md
examples/: github_action.yml
examples/github-actions/: pipelineprobe.yml
examples/quickstart/: README.md  docker-compose.yml
pipelineprobe/: __init__.py  cli.py  config.py  models.py  renderer.py
pipelineprobe/connectors/: airflow.py  bigquery.py  dagster.py  dbt.py  postgres.py  prefect.py  snowflake.py
pipelineprobe/rules/: __init__.py  airflow_rules.py  cost_rules.py  dbt_rules.py  engine.py  postgres_rules.py
pipelineprobe/templates/: report.html
reports/: pipelineprobe-report.html
tests/: conftest.py  test_cli.py  test_config.py  test_connectors.py  test_cost_rules.py  test_new_connectors.py  test_renderer.py  test_rules.py
